--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(GLUT REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIR})
 
 set(executables
-    CameraIntersectObjects
+CameraIntersectObjects3D
 )
 
 set(INCLUDE_DIR include)
@@ -50,6 +50,19 @@ foreach(executable ${executables})
         ${INCLUDE_DIR}/Color.cpp
         ${INCLUDE_DIR}/ScrolBars.hpp
         ${INCLUDE_DIR}/ScrolBar.hpp
+        ${INCLUDE_DIR}/Point3D.hpp
+        ${INCLUDE_DIR}/Point3D.cpp
+        ${INCLUDE_DIR}/Vector3D.hpp
+        ${INCLUDE_DIR}/Vector3D.cpp
+        ${INCLUDE_DIR}/Shape3D.hpp
+        ${INCLUDE_DIR}/Matrix3D.hpp
+        ${INCLUDE_DIR}/Matrix3D.cpp
+        ${INCLUDE_DIR}/Ray3D.cpp
+        ${INCLUDE_DIR}/Ray3D.hpp
+        ${INCLUDE_DIR}/Circle3D.hpp
+        ${INCLUDE_DIR}/Circle3D.cpp
+        ${INCLUDE_DIR}/Camera3D.hpp
+        ${INCLUDE_DIR}/Camera3D.cpp
         )
     target_link_libraries(${executable} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
 endforeach()
