--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.1)
 
 project(syntheseImage)
 
 if(MSVC)
-    add_compile_options(/std:c++17 /W4 /WX)
+    add_compile_options(/std:c++17 /W4 /WX /DNDEBUG)
 else()
-    add_compile_options(-std=c++17 -Wall -W -Werror)
+    add_compile_options(-std=c++17 -Wall -W -Werror -DNDEBUG )
 endif()
 
 list(APPEND CMAKE_PREFIX_PATH C:/Users/flori/freeglut)
@@ -27,29 +27,12 @@ foreach(executable ${executables})
     add_executable(
         ${executable} 
         ${SOURCE_DIR}/${executable}.cpp 
-        ${INCLUDE_DIR}/Vector2D.hpp
-        ${INCLUDE_DIR}/Vector2D.cpp
-        ${INCLUDE_DIR}/Point2D.hpp
-        ${INCLUDE_DIR}/Point2D.cpp
         ${INCLUDE_DIR}/ControllablePoints.hpp
         ${INCLUDE_DIR}/ControllablePoints.cpp
-        ${INCLUDE_DIR}/Circle2D.hpp
-        ${INCLUDE_DIR}/Circle2D.cpp
-        ${INCLUDE_DIR}/Ray2D.cpp
-        ${INCLUDE_DIR}/Ray2D.hpp
-        ${INCLUDE_DIR}/Shape2D.hpp
-        ${INCLUDE_DIR}/Square2D.hpp
-        ${INCLUDE_DIR}/Square2D.cpp
-        ${INCLUDE_DIR}/Camera2D.hpp
-        ${INCLUDE_DIR}/Camera2D.cpp
-        ${INCLUDE_DIR}/Matrix2D.hpp
-        ${INCLUDE_DIR}/Matrix2D.cpp
         ${INCLUDE_DIR}/Color.hpp
         ${INCLUDE_DIR}/Color.cpp
         ${INCLUDE_DIR}/ScrolBars.hpp
         ${INCLUDE_DIR}/ScrolBar.hpp
-        ${INCLUDE_DIR}/Point3D.hpp
-        ${INCLUDE_DIR}/Point3D.cpp
         ${INCLUDE_DIR}/Vector3D.hpp
         ${INCLUDE_DIR}/Vector3D.cpp
         ${INCLUDE_DIR}/Shape3D.hpp
@@ -64,6 +47,7 @@ foreach(executable ${executables})
         ${INCLUDE_DIR}/GlutLibrary3D.hpp
         ${INCLUDE_DIR}/GlutLibrary3D.cpp
         ${INCLUDE_DIR}/Light3D.hpp
+        ${INCLUDE_DIR}/Point.hpp
         )
     target_link_libraries(${executable} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
 endforeach()
